--- a/.github/workflows/build-win-x64.yml
+++ b/.github/workflows/build-win-x64.yml
@@ -58,7 +58,7 @@ jobs:
         & ${{ env.OPENSSL_ROOT_DIR }}/bin/openssl.exe version
 
     - name: Download and install Boost
-      uses: MarkusJx/install-boost@v2.4.5
+      uses: MarkusJx/install-boost@6d8df42f57de83c5b326b5b83e7b35d650030103
       id: install-boost
       with:
         boost_version: 1.84.0
