config(world): fix DisableWaterBreath docs for extended security levels
The DisableWaterBreath comment block was still describing the legacy security
scheme where “4 = Disabled”. In the current enum, security levels extend up to
SEC_CONSOLE (7), so “4” maps to SEC_REALM_LEADER and unintentionally disables
the breath timer for higher staff accounts (e.g. Administrator).

Update worldserver.conf.dist to document the actual behavior:
- DisableWaterBreath is the security threshold at/above which the breath timer
  is disabled (infinite breath)
- “Disabled” is now represented by a value above the highest security level
  (default set to 8)
- list all supported security levels (0..7) for clarity

--- a/src/server/worldserver/worldserver.conf.dist
+++ b/src/server/worldserver/worldserver.conf.dist
@@ -1034,14 +1034,18 @@ InstantLogout = 1
 
 #
 #    DisableWaterBreath
-#        Description: Required security level for water breathing.
-#        Default:     4  - (Disabled)
-#                     0  - (Enabled, Everyone)
-#                     1  - (Enabled, Mods/GMs/Admins)
-#                     2  - (Enabled, GMs/Admins)
-#                     3  - (Enabled, Admins)
+#        Description: Security level at/above which breath timer is disabled (infinite breath).
+#        Default:     8 = Disabled (nobody gets infinite breath via security)
+#     				  7 = Console
+#					  6 = Administrator+
+#					  5 = GM Leader+
+#					  4 = Realm Leader+
+#					  3 = Confirmed GM+
+#					  2 = Gamemaster+
+#					  1 = Moderator+
+#					  0 = Everyone
 
-DisableWaterBreath = 4
+DisableWaterBreath = 8
 
 #
 #    AllFlightPaths
