Player: Implement "Time is Money" credit reward system
- Add configurable TimeIsMoney.Interval and TimeIsMoney.Credit options to worldserver.conf
- Track interval state using ptr_Interval and ptr_IntervalDefault on Player
- Grant donate credits via AddDonateTokenCount() when the configured interval elapses
- Announce rewards using trinity_string entry 12101 (localized EN/DE, with credit and minutes placeholders)
- Add LANG_BATTLE_PAY_TIME_IS_MONEY to Language.h for the new system message
- Simplify AddDonateTokenCount() to directly update battlenet_accounts.balans via LOGIN_UPD_ADD_DONATE_TOKEN

--- a/src/server/worldserver/worldserver.conf.dist
+++ b/src/server/worldserver/worldserver.conf.dist
@@ -1,5 +1,5 @@
 ################################################
-# Trinity Core World Server configuration file #
+# Destiny Core World Server configuration file #
 ################################################
 [worldserver]
 
@@ -31,6 +31,7 @@
 #	 LOGGING SYSTEM SETTINGS
 #	 ARCHAEOLOGY SETTINGS
 #	 BATTLEPAY
+#	 TIME IS MONEY
 #
 ###################################################################################################
 
@@ -3378,6 +3379,20 @@ Bpay.Enabled = 1
 #					NZD = 30
 
 BattlePay.Currency = 1
+
+#
+###################################################################################################
+
+###################################################################################################
+# TIME IS MONEY
+#
+#         Description: Gives coins and money for players who is online after every X minutes.
+#
+#     Default:  TimeIsMoney.Interval 	= 3600000 (1 hour) [0 - disabled]
+#               TimeIsMoney.Credit    	= 1 (1 Credit)
+
+TimeIsMoney.Interval = 3600000
+TimeIsMoney.Credit   = 1
 
 #
 ###################################################################################################
