--- a/src/server/bnetserver/bnetserver.rc
+++ b/src/server/bnetserver/bnetserver.rc
@@ -1,6 +1,5 @@
 /*
- * Copyright (C) 2008-2016 TrinityCore <http://www.trinitycore.org/>
- * Copyright (C) 2005-2009 MaNGOS <http://getmangos.com/>
+ * This file is part of the DestinyCore Project. See AUTHORS file for Copyright information
  *
  * This program is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License as published by the
@@ -76,12 +75,12 @@ BEGIN
         BLOCK "080004b0"
         BEGIN
             VALUE "CompanyName",        VER_COMPANYNAME_STR
-            VALUE "FileDescription",    "NordrassilCore Battle.net Server Daemon"
+            VALUE "FileDescription",    "DestinyCore Battle.net Server Daemon"
             VALUE "FileVersion",        VER_FILEVERSION_STR
             VALUE "InternalName",       "bnetserver"
             VALUE "LegalCopyright",     VER_LEGALCOPYRIGHT_STR
             VALUE "OriginalFilename",   "bnetserver.exe"
-            VALUE "ProductName",        "NordrassilCore Battle.net Server"
+            VALUE "ProductName",        "DestinyCore Battle.net Server"
             VALUE "ProductVersion",     VER_PRODUCTVERSION_STR
         END
     END
