refactor(scripts): Move event scripts out of Custom and add Events script module
- Introduced an Events script module and wired it into the build (PrepareScripts(Events ...)) and loader (EventsScripts()).
- Moved darkmoon.cpp and midsummer_fire_festival.cpp from Custom/ to Events/ to better reflect their scope and keep Custom for truly project-specific overrides.
- Updated ScriptLoader declarations/registration so the event scripts are loaded via the new module instead of AddCustomScripts().
- Standardized/updated file headers for the moved event scripts.

--- a/src/server/scripts/CMakeLists.txt
+++ b/src/server/scripts/CMakeLists.txt
@@ -38,6 +38,7 @@ if(SCRIPTS)
   PrepareScripts(World PRIVATE_SOURCES)
   PrepareScripts(Draenor PRIVATE_SOURCES)
   PrepareScripts(EasternKingdoms PRIVATE_SOURCES)
+  PrepareScripts(Events PRIVATE_SOURCES)
   PrepareScripts(Legion PRIVATE_SOURCES)
   PrepareScripts(Outland PRIVATE_SOURCES)
   PrepareScripts(Pandaria PRIVATE_SOURCES)
